Add RemoteObjectStoreRegistry crate and simplify TieredObjectStore FFM
Signed-off-by: nishchay21 <nishcha@amazon.com>